--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -91,5 +91,32 @@
     "doneEditing" : "Сохранить изменения",
     "advancedSettings": "Продвинутые настройки",
     "delete": "Удалить"
+  },
+  "form": {
+    "fields": {
+      "name": "Название",
+      "screen": "Экран",
+      "width": "Ширина",
+      "height": "Высота"
+    }
+  },
+  "messages": {
+    "success": {
+      "signUpRequest": "На вашу почту отправлено письмо для верификации акккаунта",
+      "signUpConfirm": "Аккаунт успешно верифицирован",
+      "auth": "Успешная авторизация",
+      "created": "Профиль успешно создан",
+      "instanceCreate": "Профиль успешно создан",
+      "instanceEdit": "Профиль успешно отредактирован",
+      "instanceRemove": "Профиль успешно удален"
+    },
+    "error": {
+      "auth": "Не удалось авторизоваться",
+      "signUpRequest": "Не удалось создать аккаунт",
+      "signUpConfirm": "Не удалось верифицировать аккаунт",
+      "emailConfirm": "Не удалось верифицировать аккаунт",
+      "profiles": "Не удалось загрузить браузерные профили",
+      "instanceRemove": "Не удалось удалить профиль"
+    }
   }
 }
