i18n: translated security step (part 2)

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -137,7 +137,69 @@
       "language": "Язык",
       "acceptLang": "Язык",
       "reduceAcceptLanguage": "Сократить заголовок accept lang",
-      "defaultCountryCode": "Код страны по умолчанию"
+      "defaultCountryCode": "Код страны по умолчанию",
+
+      "sslVersionMax": "Максимальная версия SLL",
+      "sslVersionMin": "Минимальная версия SLL",
+
+      "isolation": "Изоляция",
+
+      "processPerSite": "Режим \"Один процесс на все сайты\"",
+      "sitePerProcess": "Режим \"Один сайт на процесс\"",
+      "singleProcess": "Режим \"Один процесс\"",
+      "processPerTab": "Режим \"Один процесс на вкладку\"",
+      "isolateOrigins": "Изолировать Origin",
+      "isolatedAppOrigins": "Излоировать App Origin",
+      "isolatedContextOrigin": "Изолировать Context Origin",
+      "isolationByDefault": "Изолировать по умолчанию",
+      "disableSiteIsolationForPolicy": "Отключить изоляцию сайтов для политики",
+      "disableSiteIsolationTrials": "Отключть изоляцию сайтов Trials",
+      "disableAutoWptOriginIsolation": "Отключить AutoWptOriginIsolation",
+
+      "fakes": "Подделка",
+
+      "useFakeCodecForPeerConnection": "Использование поддельного кодека для пирингового соединения",
+      "useFakeDeviceForMediaStream": "Использовать поддельное устройство для медиапотока",
+      "useFakeMjpegDecodeAccelerator": "Использовать поддельный ускоритель декодирования Mjpeg",
+      "useFakeUiForFedcm": "Использовать поддельный интерфейс для Fedcm",
+      "useFakeUiForMediaStream": "Использовать поддельный интерфейс для медиапотока",
+      "useFileForFakeAudioCapture": "Использовать файл для захвата фальшивого звука",
+
+      "simulation": "Имитация",
+
+      "simulateCriticalUpdate": "Имитировать критическое обновление",
+      "simulateElevatedRecovery": "Имитировать повышенное восстановление",
+      "simulateOutdated": "Имитировать устаревшую версию",
+      "simulateOutdatedNoAu": "Имитировать устаревшую версию (no au)",
+      "simulateUpdateErrorCode": "Имитировать ошибку обновления",
+      "simulateUpdateHresult": "Имитировать hresult",
+      "simulateUpgrade": "Имитировать обновление",
+
+      "other": "Другое",
+
+      "remoteAllowOrigins": "Разрешить удаленные Origins",
+      "disableWebSecurity": "Отключить Web безопасность (опасно)",
+      "disabledCookieEncryption": "Отключить шифрование файлов cookie (опасно)",
+      "enableExperimentalCookieFeatures": "Включить экспериментальные функции Cookie",
+      "disableDatabases": "Отключить базы данных (не рекомендуется)",
+      "disableLocalStorage": "Отключить LocalStorage (не рекомендуется)",
+      "unlimitedStorage": "Безлимитное хранилище данных",
+      "disableDomainReliability": "Отключить надежность доменов",
+      "enablePotentiallyAnnoyingSecurityFeatures": "Включить потенциально раздражающие функции безопасности",
+      "disableDomainBlockingFor3dApis": "Отключить блокировку доменов для 3D APIs",
+      "disablePopupBlocking": "Отключить блокировку всплывающих окон",
+      "disableGaiaServices": "Отключить сервисы Gaia",
+      "disableV8IdleTasks": "Отключить V8 idle tasks",
+      "disableHidBlocklist": "Отключить hid blocklist",
+      "disableHidDetectionOnOobe": "Отключить скрытое обнаружение в Oobe",
+      "disableUsbKeyboardDetect": "Отключить обнаружение usb клавиатуры",
+      "disableSigninScopedDeviceId": "Отключить идентификатор устройства с масштабируемым входом в систему",
+      "disableArcCpuRestriction": "Отключить ограничение Arc Cpu",
+      "reportVp9AsAnUnsupportedMimeType": "Сообщить о Vp9 как о неподдерживаемом mime-type",
+      "safebrowsingEnableEnhancedProtection": "Включить усиленную защиту при браузинге (?)",
+      "safebrowsingManualDownloadBlacklist": "Ручной черный список загрузок при браузинге",
+      "disableAppContentVerification": "Отключить проверку содержимого приложений",
+      "disableCheckerImaging": "Отключить проверку изображений"
     },
     "dns": {
       "title": "Рекомендуется включить защиту dns при использовании прокси.",
