i18n: translated steps (part 3)

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -199,7 +199,63 @@
       "safebrowsingEnableEnhancedProtection": "Включить усиленную защиту при браузинге (?)",
       "safebrowsingManualDownloadBlacklist": "Ручной черный список загрузок при браузинге",
       "disableAppContentVerification": "Отключить проверку содержимого приложений",
-      "disableCheckerImaging": "Отключить проверку изображений"
+      "disableCheckerImaging": "Отключить проверку изображений",
+
+      "checkersWhoer": "Открывать чекер whoer при запуске",
+      "checkersIphey": "Открывать чекер iphey при запуске",
+      "checkersCreepjs": "Открывать чекер creepjs при запуске",
+      "checkersBotDetection": "Открывать чекер на ботов при запуске",
+      "checkersDnsLeak": "Открывать чекер на утечку dns при запуске",
+      "checkersWebrtcLeak": "Открывать чекер на утечку webrtc при запуске",
+      "checkersChromeSecurity": "Открывать настройки безопасности chrome при запуске",
+
+      "disableRemoteFonts": "Отключить поддержку удаленных веб-шрифтов",
+      "disableFontSubpixelPositioning": "Отключить субпиксельное позиционирование шрифтов",
+      "disableLcdText": "Отключить текст на ЖК-дисплее",
+      "disablePreferCompositingToLcdText": "Отключить приоритет на создание слоев композитинга",
+      "disableScrollToTextFragment": "Отключить функцию ScrollToTextFragment",
+      "enableFontAntialiasing": "Включить сглаживание шрифтов",
+
+      "disableJavascriptHarmonyShipping": "Отключить последние возможности ECMAScript 6+",
+      "javascriptHarmony": "JavaScript Harmony",
+      "jsFlags": "Флаги JavaScript",
+
+      "disableExtensions": "Отключить расширения",
+      "disableExtensionsExcept": "Отключить расширения, кроме:",
+      "disableExtensionsFileAccessCheck": "Отключить проверку согласия пользователя для расширений",
+      "disableExtensionsHttpThrottling": "Отключить функциональность расширений http throttling",
+      "disableFeatures": "Отключить функции",
+      "disableDefaultApps": "Отключить установку приложений по умолчанию",
+      "disableComponentExtensionsWidthBackgroundPages": "Отключить расширения компонентов по умолчанию с фоновыми страницами",
+      "enableExperimentalExtensionApis": "Включить экспериментальные API расширения",
+      "listApps": "Веб приложения",
+      "listAudioDevices": "Аудиоустройства",
+      "loadApps": "Приложения, загружаемые при запуске",
+      "loadExtension": "Расширения, загружаемые при запуске",
+
+      "disableFileSystem": "Отключить FileSystem API",
+      "disableMediaSessionApi": "Отключить Media Session API",
+      "disableNotifications": "Отключить Notifications API",
+      "disablePermissionsApi": "Отключить Permissions API",
+      "disablePresentationApi": "Отключить Presentation API",
+      "disableRemotePlaybackApi": "Отключить Remote Playback API",
+      "disableScreenOrientationLock": "Отключить блокировку ориентации экрана",
+      "disableSharedWorkers": "Отключить Shared Workers",
+      "disableSpeechApi": "Отключить Speech API",
+      "disableSpeechSynthesisApi": "Отключить Speech Synthesis API",
+      "disabled3DApis": "Отключить 3D APIs",
+      "disableTouchDragDrop": "Отключить Drag and Drop",
+      "disableSystemFontCheck": "Отключить системную проверку шрифтов",
+      "enableExperimentalWebPlatformFeatures": "Включить экспериментальные функции Web Platform",
+      "enableExperimentalWebassemblyFeatures": "Включить экспериментальные функции Webassembly",
+      "enableExperimentalWebassemblyStackSwitching": "Включить экспериментальный Web Assembly Stack Switching",
+      "enablePrivacySandboxAdsApis": "Включить Privacy Sandbox Ads API",
+      "enableUsermediaScreenCapturing": "Включить захват экрана Usermedia",
+      "disableBlinkFeatures": "Отключить функции blink",
+      "blinkSettings": "Настройки blink",
+
+      "qsAddFakeBluetoothDevices": "Добавить поддельные Bluetooth устройства",
+      "qsAddFakeCastDevices": "Добавить поддельные Cast устройства"
     },
     "dns": {
       "title": "Рекомендуется включить защиту dns при использовании прокси.",
