i18n: translated steps (part 4)

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -255,7 +255,71 @@
       "blinkSettings": "Настройки blink",
 
       "qsAddFakeBluetoothDevices": "Добавить поддельные Bluetooth устройства",
-      "qsAddFakeCastDevices": "Добавить поддельные Cast устройства"
+      "qsAddFakeCastDevices": "Добавить поддельные Cast устройства",
+
+      "enabled2DLayers": "Включить 2D слои Canvas",
+      "disableCanvasAa": "Отключить сглаживание Canvas",
+      "disabled2DCanvasClipAa": "Отключить сглаживание в 2D Canvas",
+      "disabled2DCanvasImageChromium": "Отключить 2D изображение Canvas",
+      "disableReadingFromCanvas": "Отключить чтение с Canvas",
+      "disabledAccelerated2DCanvas": "Отключить ускорение 2D Canvas",
+
+      "noExperiments": "Отключить экспериментальные функции",
+      "enableLowEndDeviceMode": "Включить режима low-end устройства",
+      "crosDisksFake": "Включить поведение поддельных дисков cros",
+      "denyPermissionPrompts": "Запретить появление подсказок",
+      "deviceScaleFactor": "Коэффициент масштабирования устройства",
+      "disableHighresTimer": "Отключить таймер высокой точности",
+      "disablePushstateThrottle": "Отключить троттлинг вызовов history.pushState/replaceState",
+      "disableAutoReload": "Отключить автоматическую перезагрузку страниц с ошибками",
+      "disableBackForwardCache": "Отключить функцию BackForwardCache",
+      "disableBackgroundNetworking": "Отключить фоновую сеть",
+      "disableBackgroundTimerThrottling": "Отключить дросселирования задач по таймеру",
+
+      "disablePepper3d": "Отключить Pepper 3D",
+      "disablePepper3dImageChromium": "Отключить Pepper 3D Image Chromium",
+      "disableUseMojoVideoDecoderForPepper": "Отключить использование mojo video decoder для pepper",
+      "disableAcceleratedMjpegDecode": "Отключить ускорение декодирования jpeg",
+      "disableAcceleratedVideoEncode": "Отключить ускорение кодирования видео",
+      "disableGpu": "Отключить GPU",
+      "disableGpuCompositing": "Отключить GPU Compositing",
+      "disableGpuDriverBugWorkarounds": "Отключите обходные пути для устранения ошибок драйвера GPU",
+      "disableGpuEarlyInit": "Отключить раннюю инициализацию GPU",
+      "disableGpuMemoryBufferCompositorResources": "Отключить ресурсы композитора буфера памяти GPU",
+      "disableGpuMemoryBufferVideoFrames": "Отключение буферизации видеокадров в памяти GPU",
+      "disableGpuProcessCrashLimit": "Отключить ограничение на сбой процессов GPU",
+      "disableGpuProcessForDx12InfoCollection": "Отключить процесс GPU для сбора информации DX12",
+      "disableGpuProgramCache": "Отключить программный кэш GPU",
+      "disableGpuRasterization": "Отключить растеризацию на GPU",
+      "disableGpuSandbox": "Отключить GPU sandbox",
+      "disableGpuShaderDiskCache": "Отключить дисковый кэш шейдеров GPU",
+      "disableGpuVsync": "Отключите GPU vsync",
+      "disableGpuWatchdog": "Отключить GPU Watchdog",
+      "gpuBlocklistTestGroup": "Тестовая группа блок-листа GPU",
+      "gpuDeviceId": "Идентификатор устройства GPU",
+      "gpuDiskCacheSizeKb": "Размер дискового кэша GPU (kb)",
+      "gpuDriverVersion": "Версия драйвера GPU",
+      "gpuLauncher": "Лаунчер GPU",
+      "gpuPreferences": "Приоритеты GPU",
+      "gpuProgramCacheSizeKb": "Размер кэша программ GPU (kb)",
+      "gpuSandboxAllowSysvShm": "Разрешить GPU Sandbox sysv shm",
+      "gpuSandboxStartEarly": "Запустить GPU Sandbox пораньше",
+      "gpuStartupDialog": "Диалог запуска GPU",
+      "gpuSubSystemId": "Идентификатор подсистемы GPU",
+      "gpuVendorId": "Идентификатор производителя GPU",
+      "inProcessGpu": "Запустить процесс GPU как поток в процессе браузера.",
+      "disableWebgl": "Отключить WebGL",
+      "disableWebglImageChromium": "Отключить WebGL Image Chromium",
+      "disableWebgl2": "Отключить WebGL 2",
+      "webglAntialiasingMode": "Режим сглаживания WebGL",
+      "webglMsaaSampleCount": "Количество образцов WebGL MSAA",
+      "disableGlDrawingForTests": "Отключение GL Drawing для тестов",
+      "disableGlExtensions": "Отключить расширения GL",
+      "disableGlslTranslator": "Отключить транслятор GLSL"
+    },
+    "advanced": {
+      "title": "Будьте аккуратны с продвинутыми настройками!",
+      "description": "Они могут сломать ваш браузерный профиль или заменить сгенерированный отпечаток, что может увеличить количество фрод очков"
     },
     "dns": {
       "title": "Рекомендуется включить защиту dns при использовании прокси.",
