i18n: translated steps (part 5)

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -280,6 +280,7 @@
       "disablePepper3dImageChromium": "Отключить Pepper 3D Image Chromium",
       "disableUseMojoVideoDecoderForPepper": "Отключить использование mojo video decoder для pepper",
       "disableAcceleratedMjpegDecode": "Отключить ускорение декодирования jpeg",
+      "disableAcceleratedVideoDecode": "Отключить ускорение декодирования видео",
       "disableAcceleratedVideoEncode": "Отключить ускорение кодирования видео",
       "disableGpu": "Отключить GPU",
       "disableGpuCompositing": "Отключить GPU Compositing",
@@ -315,7 +316,47 @@
       "webglMsaaSampleCount": "Количество образцов WebGL MSAA",
       "disableGlDrawingForTests": "Отключение GL Drawing для тестов",
       "disableGlExtensions": "Отключить расширения GL",
-      "disableGlslTranslator": "Отключить транслятор GLSL"
+      "disableGlslTranslator": "Отключить транслятор GLSL",
+
+      "webviewDisableAppRecovery": "Отключить восстановление приложений WebView",
+      "webviewDisablePackageAllowlistThrottling": "Отключить дросселирование списка разрешенных пакетов WebView",
+      "webviewDisableSafebrowsingSupport": "Используется для отключения функции безопасного просмотра в веб-просмотре",
+      "webviewEnableAppRecovery": "Включить восстановить приложений WebView",
+      "webviewEnableModernCookieSameSite": "Включить WebView Modern Cookie Same-Site",
+      "webviewMparchFencedFrames": "WebView MPArch fenced frames",
+      "webviewSafebrowsingBlockAllResources": "Блокирует безопасный просмотр всех ресурсов WebView",
+      "webviewSandboxedRenderer": "Песочный рендерер WebView",
+      "webviewShadowDomFencedFrames": "WebView Shadow DOM fenced frames",
+      "disableWebrtcEncryption": "Отключить шифрование WebRTC",
+      "disableWebrtcHwDecoding": "Отключить декодирование WebRTC HW",
+      "disableWebrtcHwEncoding": "Отключить кодирование WebRTC HW",
+      "webrtcEventLogProactivePruningDelta": "Дельта проактивной обрезки журнала событий WebRTC",
+      "webrtcEventLogUploadDelayMs": "Задержка загрузки журнала событий WebRTC (мс)",
+      "webrtcEventLogUploadNoSuppression": "Загрузка журнала событий WebRTC без подавления",
+      "webrtcEventLogging": "Регистрация событий WebRTC",
+      "webrtcIpHandlingPolicy": "WebRTC Policy по обработке IP-адресов",
+      "webrtcMaxCpuConsumptionPercentage": "WebRTC максимальный % потребления ЦП",
+
+      "disableCompositedAntialiasing": "Отключить композитное сглаживание",
+      "disableD3d11": "Отключить D3D11",
+      "disableDirectComposition": "Отключить прямую композицию",
+      "disableDirectCompositionVideoOverlays": "Отключить наложение видео прямой композиции",
+      "disableFrameRateLimit": "Отключить ограничение частоты кадров",
+      "disableRendererAccessibility": "Отключить accessibility рендеринга",
+      "disableRendererBackgrounding": "Отключить фоновый режим рендеринга",
+      "disableMetalShaderCache": "Отключить кэш metal shaders",
+      "disableNewContentRenderingTimeout": "Отключение тайм-аута рендеринга нового содержимого",
+      "disableImageAnimationResync": "Отключить повторную синхронизацию анимации изображения",
+      "disableNv12DxgiVideo": "Отключить NV12 dxgi video",
+      "disablePartialRaster": "Отключить частичный растр",
+      "disableRgba4444Textures": "Отключить текстуры RGBA_4444",
+      "disableRtcSmoothnessAlgorithm": "Отключить алгоритм сглаживания RTC",
+      "disableShaderNameHashing": "Отключить хэширование имен шейдеров",
+      "disableSkiaRuntimeOpts": "Отключение опций времени выполнения skia",
+      "disableSmoothScrolling": "Отключить плавную прокрутку",
+      "disableSoftwareCompositingFallback": "Отключить программный откат композитинга",
+      "disableSoftwareRasterizer": "Отключить программный растеризатор",
+      "disableAngleFeatures": "Отключение угловых функций"
     },
     "advanced": {
       "title": "Будьте аккуратны с продвинутыми настройками!",
