i18n: translated all toasts

--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -386,6 +386,7 @@
     },
     "error": {
       "auth": "Не удалось авторизоваться",
+      "authRequired": "Необходимо авторизоваться",
       "signUpRequest": "Не удалось создать аккаунт",
       "signUpConfirm": "Не удалось верифицировать аккаунт",
       "emailConfirm": "Не удалось верифицировать аккаунт",
