--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -34,8 +34,7 @@
   "profiles": {
     "title": "Браузерные профили",
     "new": "Создать новый профиль",
-    "creating": "Создание нового профиля",
-    "note": "Примечание: Вы можете запуск."
+    "creating": "Создание нового профиля"
   },
   "cabinet": {
     "title": "Личный кабинет",
