--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -98,6 +98,10 @@
   },
   "form": {
     "fields": {
+      "username": "Логин",
+      "email": "E-mail",
+      "password": "Пароль",
+
       "advancedSettings": "Продвинутые настройки",
 
       "name": "Название",
