--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -379,7 +379,7 @@
   },
   "messages": {
     "success": {
-      "signUpRequest": "На вашу почту отправлено письмо для верификации акккаунта",
+      "signUpRequest": "На вашу почту отправлено письмо для верификации акккаунта. Если письмо не дошло, проверьте папку \"спам\".",
       "signUpConfirm": "Аккаунт успешно верифицирован",
       "auth": "Успешная авторизация",
       "created": "Профиль успешно создан",
