--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -394,7 +394,8 @@
       "signUpConfirm": "Не удалось верифицировать аккаунт",
       "emailConfirm": "Не удалось верифицировать аккаунт",
       "profiles": "Не удалось загрузить браузерные профили",
-      "instanceRemove": "Не удалось удалить профиль"
+      "instanceRemove": "Не удалось удалить профиль",
+      "paymentError": "Ошибка оплаты"
     }
   }
 }
