--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -385,7 +385,8 @@
       "created": "Профиль успешно создан",
       "instanceCreate": "Профиль успешно создан",
       "instanceEdit": "Профиль успешно отредактирован",
-      "instanceRemove": "Профиль успешно удален"
+      "instanceRemove": "Профиль успешно удален",
+      "payment": "Подписка успешно оплачена"
     },
     "error": {
       "auth": "Не удалось авторизоваться",
@@ -395,7 +396,8 @@
       "emailConfirm": "Не удалось верифицировать аккаунт",
       "profiles": "Не удалось загрузить браузерные профили",
       "instanceRemove": "Не удалось удалить профиль",
-      "paymentError": "Ошибка оплаты"
+      "paymentError": "Ошибка оплаты",
+      "payment": "Ошибка при оплате подписки"
     }
   }
 }
