--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -386,7 +386,7 @@
       "instanceCreate": "Профиль успешно создан",
       "instanceEdit": "Профиль успешно отредактирован",
       "instanceRemove": "Профиль успешно удален",
-      "payment": "Подписка успешно оплачена"
+      "payment": "Подписка успешно оплачена. Статус подписки будет обновлен в течении несколько секунд. Если этого так и не случилось, свяжитесь с нами."
     },
     "error": {
       "auth": "Не удалось авторизоваться",
