--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -21,6 +21,15 @@
     "canvas": "Canvas",
     "additional": "Прочее"
   },
+  "modal": {
+    "macosinstall": {
+      "title": "Установка приложения на MacOS",
+      "p1": "Если у вас версия MacOS 10.15 (Catalina) и выше, необходимо после перемещения приложения в папку \"Applications\", разрешить Apple запускать данное приложение",
+      "p2": "Выполните следующую команду в терминале (командной строке):",
+      "p3": "После этого можно запускать приложение. Если все еще возникает ошибка, обратитесь пожалуйста в службу поддержки.",
+      "ok": "Понятно"
+    }
+  },
   "auth": {
     "login": "Вход",
     "noAccount": "Нет аккаунта?",
