--- a/client/src/i18n/locales/ru.json
+++ b/client/src/i18n/locales/ru.json
@@ -28,6 +28,10 @@
       "p2": "Выполните следующую команду в терминале (командной строке):",
       "p3": "После этого можно запускать приложение. Если все еще возникает ошибка, обратитесь пожалуйста в службу поддержки.",
       "ok": "Понятно"
+    },
+    "paymentmethod" : {
+      "title": "Оплата подписки",
+      "ok": "Закрыть"
     }
   },
   "auth": {
